PixelWalker copy bot changelog

2025-10-18 Version 1.8.3
- Website: Fix in game errors (such as bad command usage) being shown in website as error alerts.

2025-10-11 Version 1.8.2
- Bot: Updated to work with PixelWalker version 0.26.1-alpha

2025-10-01 Version 1.8.1
- Bot: Fixed .edit command in some cases not pasting edited blocks at correct location.

2025-09-12 Version 1.8.0
- Bot: Improved .paste and .smartpaste commands, by immediately pasting repeated blocks.
- Bot: When doing partial import with .import, allow specifying any 2 corner positions (just like when selecting area with gold coins).

2025-09-07 Version 1.7.3
- Bot: Fix .import command pasting just empty blocks.

2025-08-21 Version 1.7.2
- Bot: Allow .edit id to replace blocks to air (empty).

2025-08-16 Version 1.7.1
- Bot: Updated to work with PixelWalker version 0.24.0-alpha

2025-08-12 Version 1.7.0
- Bot: Improved .edit command, by immediately pasting changed blocks.

2025-08-12 Version 1.6.5
- Bot: Fixed an issue where destination arguments would get ignored in .import command.

2025-08-01 Version 1.6.4
- Website: Fixed an issue where EER/EELVL import sometimes didn't work, when world had piano notes or switch resetters.
- Website: Fixed an issue where EER/EELVL import would place black background even when world didn't have world background set.

2025-07-31 Version 1.6.3
- Website: Improved EER/EELVL import, by placing PW hex backgrounds from world background color setting.

2025-07-30 Version 1.6.2
- Website: Fixed an issue where world portal wasn't importing properly in EER import.
- Website: Improved EER import, by placing additional PW blocks that exist in EER. Thanks John!

2025-07-29 Version 1.6.1
- Website: Fixed an issue, where some positions of blocks would be ignored when importing EER worlds. Thanks John!

2025-07-28 Version 1.6.0
- Website: Added an option to import Everybody Edits Rewritten (EER) worlds.

2025-07-24 Version 1.5.2